--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,7 @@
     border: none;
     outline: none;
     font-family: 'Poppins', sans-serif;
+    scroll-behavior: smooth;
 }
 
 html{
@@ -151,10 +152,12 @@ section{
     margin-right: 1rem;
 }
 
+/*-------------------------------------------------------------------------*/
+/*Alert*/
 .alert-box{
     position: fixed;
     inset: 0;
-    top: 5.6rem;
+    top: 4.6rem;
     margin: 0 auto;
     width: 56rem;
     height: 6rem;
@@ -221,6 +224,7 @@ section{
 /*Authentification*/
 .auth-modal {
     position: relative;
+    z-index: 5000;
     width: 42rem;
     height: 43rem;
     background-color: var(--card-background);
@@ -237,11 +241,12 @@ section{
 }
 
 .auth-modal.show {
+    display: flex;
     transform: scale(1);
 }
 
 .auth-modal.slide {
-    height: 52rem;
+    height: 65rem;
 }
 
 .auth-modal .form-box {
@@ -283,7 +288,6 @@ section{
     height: 100%;
     background-color: var(--background-color);
     border: 0.2rem solid var(--card-background);
-    outline: none;
     border-radius: 4rem;
     font-size: 1.6rem;
     color: var(--text-color);
@@ -344,6 +348,82 @@ section{
     border-bottom-left-radius: 2rem;
 }
 
+/*-------------------------------------------------------------------------*/
+/*Opportunistage*/
+.site-name{
+    position: absolute;
+    inset: 0;
+    margin: auto;
+    padding-top: 25rem;
+    width: 100%;
+    text-align: center;
+    font-size: 3rem;
+    font-weight: 600;
+    color: var(--text-color);
+}
+
+/*-------------------------------------------------------------------------*/
+/*home section*/
+.home-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.home-header-content h1{
+    font-size: 3.2rem;
+    font-weight: 700;
+}
+
+.home-header-content p{
+    margin-bottom: 2rem;
+    font-size: 2rem;
+}
+
+.home-header-content .btn-home-header-content{
+    display: inline-block;
+    padding: 1rem 2.8rem;
+    background-color: var(--primary-color);
+    border-radius: 4rem;
+    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.3);
+    font-size:  1.6rem;
+    color: var(--off-white-text) ;
+    letter-spacing: .1rem;
+    font-weight: 600;
+    transition: .5s ease;
+    margin-bottom: 2rem;
+}
+
+.home-header-content .btn-home-header-content:hover{
+    background-color: var(--text-color);
+}
+
+.home-student, .home-company{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 4rem;
+}
+
+.home-student-img img, .home-company-img img{
+    width: 35vw;
+}
+
+.home-student-content h2, .home-company-content h2{
+    font-size: 2.5rem;
+    text-align: left;
+    line-height: 1.2;
+}
+
+.home-student-content h3, .home-company-content h3{
+    color: var(--primary-color);
+    font-size: 2rem;
+}
+
+.home-student-content p, .home-company-content p{
+    font-size: 1.6rem;
+    margin: 2rem 0;
+}
 
 /*-------------------------------------------------------------------------*/
 /*footer*/
@@ -383,6 +463,11 @@ footer p a:hover{
 @media screen and (max-width : 991px) {
     .header{
         padding: 2rem 3%;
+    }
+
+    section{
+        min-height: auto ;
+        padding: 10% 3% 2rem;
     }
 
     footer{
@@ -448,6 +533,10 @@ footer p a:hover{
         margin: 2rem auto;
     }
 
+    .auth-modal.slide {
+        height: 55rem;
+    }
+
     .auth-modal .form-box {
         padding: 2rem;
     }
@@ -486,4 +575,29 @@ footer p a:hover{
         height: 4rem;
         font-size: 3rem;
     }
+
+    .alert-box{
+        width: 60%;
+    }
+
+    .site-name{
+        font-size: 2rem;
+    }
+
+    .home-header, .home-company{
+        flex-direction: column-reverse;
+    }
+
+    .home-header-content h1{
+        font-size: 2.6rem;
+    }
+
+    .home-header-img img, .home-student-img img, .home-company-img img{
+        width: 70vw;
+    }
+
+    .home-student{
+        flex-direction: column;
+    }
+
 }
