Ajout de quelques commentaires

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -363,7 +363,7 @@ section{
 }
 
 /*-------------------------------------------------------------------------*/
-/*home section*/
+/*home sections*/
 .home-header{
     display: flex;
     justify-content: space-between;
