--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -191,7 +191,7 @@ section{
     width: 100%;
     height: .2rem;
     background-color: var(--success-color);
-    animation: progressBar 6s linear forwards;
+    animation: progressBar 3s linear forwards;
 }
 
 .alert.error::after{
@@ -346,6 +346,78 @@ section{
     cursor: pointer;
     z-index: 500;
     border-bottom-left-radius: 2rem;
+}
+
+/*-------------------------------------------------------------------------*/
+/*Modifier profil*/
+.edit-profil h2{
+    font-size: 4.5rem;
+    margin-bottom: 9rem;
+    text-align: center;
+}
+
+.edit-profil form{
+    max-width: 70rem;
+    margin: 1rem auto;
+    margin-bottom: 3rem;
+    text-align: center;
+}
+
+.edit-profil form .edit-profil-input-box{
+    display: flex;
+    margin-bottom: 2rem;
+    flex-direction: column; 
+    flex-wrap: wrap;
+}
+
+.edit-profil form .edit-profil-input-box label{
+    text-align: left;
+    font-size: 2rem;
+}
+
+.edit-profil form .edit-profil-input-box input, .edit-profil form textarea{
+    width: 100%;
+    padding: 1.5rem;
+    font-size: 1.6rem;
+    color: var(--text-color);
+    background-color: var(--card-background);
+    border-radius: .8rem;
+    margin: .7rem 0;
+}
+
+.edit-profil form textarea{
+    resize: none;
+}
+
+.edit-profil form .edit-profil-btn{
+    margin-top: 2rem 0;
+    width: 100%;
+    height: 4.5rem;
+    background-color: var(--primary-color);
+    color: var(--off-white-text);
+    border-radius: 4rem;
+    border: none;
+    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.3);
+    font-size: 2rem;
+    font-weight: 500;
+    cursor: pointer;
+    transition: .3s ease;
+}
+
+.edit-profil form .edit-profil-btn:hover{
+    background-color: var(--text-color);
+}
+
+.edit-profil .edit-profil-input-box select{
+    width: 100%;
+    height: 100%;
+    background-color: var(--background-color);
+    border: 0.2rem solid var(--card-background);
+    border-radius: 4rem;
+    font-size: 1.6rem;
+    color: var(--text-color);
+    padding: 1rem 4.5rem  1rem 2rem;
+    border-radius: .8rem;
 }
 
 /*-------------------------------------------------------------------------*/
