--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@
 :root {
     --primary-color: #005F99;
     --secondary-color: #4FB0E3;
+    --published-bg: #D4F8E8;
     --success-color: #2ECC71;
     --error-color: #E74C3C;
     --off-white-text: #F0F2F5;
@@ -421,6 +422,172 @@ section{
 }
 
 /*-------------------------------------------------------------------------*/
+/*Modifier profil*/
+.add-offer h2{
+    font-size: 4.5rem;
+    margin-bottom: 9rem;
+    text-align: center;
+}
+
+.add-offer form{
+    max-width: 70rem;
+    margin: 1rem auto;
+    margin-bottom: 3rem;
+    text-align: center;
+}
+
+.add-offer form .add-offer-input-box{
+    display: flex;
+    margin-bottom: 2rem;
+    flex-direction: column; 
+    flex-wrap: wrap;
+} 
+
+.add-offer form .add-offer-input-box label{
+    font-size: 2rem;
+    text-align: left;
+}
+
+.add-offer form .add-offer-input-box input, .add-offer form textarea{
+    width: 100%;
+    padding: 1.5rem;
+    font-size: 1.6rem;
+    color: var(--text-color);
+    background-color: var(--card-background);
+    border-radius: .8rem;
+    margin: .7rem 0; 
+}
+
+.add-offer form textarea{
+    resize: none;
+}
+
+.add-offer form .add-offer-btn{
+    margin-top: 2rem 0;
+    width: 100%;
+    height: 4.5rem;
+    background-color: var(--primary-color);
+    color: var(--off-white-text);
+    border-radius: 4rem;
+    border: none;
+    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.3);
+    font-size: 2rem;
+    font-weight: 500;
+    cursor: pointer;
+    transition: .3s ease;
+}
+
+.add-offer form .add-offer-btn:hover{
+    background-color: var(--text-color);
+}
+
+.add-offer form .add-offer-input-box select{
+    width: 100%;
+    height: 100%;
+    background-color: var(--background-color);
+    border: 0.2rem solid var(--card-background);
+    border-radius: 4rem;
+    font-size: 1.6rem;
+    color: var(--text-color);
+    padding: 1rem 4.5rem  1rem 2rem;
+    border-radius: .8rem;   
+}
+
+/*-------------------------------------------------------------------------*/
+/*Afficher offre companies*/
+.view-offer h2{
+    font-size: 4.5rem;
+    margin-bottom: 9rem;
+    text-align: center;
+}
+
+.view-offer .no-offer{
+    font-size: 2.5rem;
+    text-align: center;
+    font-weight: 600;
+    margin-bottom: 3rem;
+    color: var(--primary-color)
+}
+
+.view-offer .offer-box .offer-card{
+    border-radius: 2rem;
+    background-color: var(--card-background);
+    padding: 2.5rem 2rem;
+    margin-bottom: 2rem;
+    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.3);
+}
+
+.view-offer .offer-box .offer-card .offer-card-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 1rem;
+}
+
+.view-offer .offer-box .offer-card .offer-card-header h6{
+    padding-left: 2.5rem;
+    font-size: 3rem;
+    font-weight: 700;
+}
+
+.view-offer .offer-box .offer-card .offer-card-header div{
+    background-color: var(--published-bg) ;
+    padding: .8rem 1rem;
+    margin-right: 2.5rem;
+    border-radius: .8rem;
+    color: var(--success-color);
+    font-size: 1.6rem;
+}
+
+.view-offer .offer-box .offer-card p{
+    width: 70%;
+    font-size: 1.8rem;
+    margin-left: 2.5rem;
+    margin-bottom: 2rem;
+    font-weight: 500;
+    color: var(--primary-color);
+}
+
+.view-offer .offer-box .offer-card .offer-card-action{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.view-offer .offer-box .offer-card .offer-card-action a{
+    background-color: var(--primary-color);
+    color: var(--off-white-text);
+    font-size:1.6rem;
+    border-radius: 1rem ;
+    padding: 1rem 2rem;
+    margin-right: 2.5rem ;
+    cursor: pointer;
+    transition: .3s ease;
+}
+
+.view-offer .offer-box .offer-card .offer-card-action a:hover{
+    background-color: var(--text-color);
+}
+
+.view-offer .offer-box .offer-card .offer-card-action .offer-details{
+    background-color: var(--card-background);
+    color: var(--text-color);
+    border-radius: 1rem ;
+    padding: 1rem 2rem;
+    cursor: pointer;
+    transition: .3s ease;
+}
+
+.view-offer .offer-box .offer-card .offer-card-action .offer-details:hover{
+    background-color: var(--text-color);
+    color: var(--off-white-text);
+}
+/* *{
+    border: 1px solid red;
+} */
+
+
+/*-------------------------------------------------------------------------*/
 /*site-name*/
 .site-name{
     position: absolute;
@@ -667,7 +834,7 @@ footer p a:hover{
     }
 
     section{
-        min-height: auto ;
+        min-height: 100vh; 
         padding: 10% 3% 2rem;
     }
 
