--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -556,7 +556,7 @@ section{
 /*Modifier profil*/
 .edit-profil h2{
     font-size: 3.5rem;
-    margin-bottom: 1rem;
+    margin-bottom: 2.4rem;
     text-align: center;
 }
 
@@ -593,8 +593,11 @@ section{
     resize: none;
 }
 
+.profil-info-box.last{
+    margin-bottom: 2.5rem;
+}
+
 .edit-profil form .edit-profil-btn{
-    margin-top: 2rem ;
     width: 100%;
     height: 4.5rem;
     background-color: var(--primary-color);
@@ -622,6 +625,11 @@ section{
     color: var(--text-color);
     padding: 1rem 4.5rem  1rem 2rem;
     border-radius: .8rem;
+}
+
+.edit-profil .edit-profil-input-box p {
+    font-weight: 500;
+    font-size: 1.2rem;
 }
 
 /*-------------------------------------------------------------------------*/
