--- a/project/assets/css/style.css
+++ b/project/assets/css/style.css
@@ -367,6 +367,26 @@ section{
     gap: 3rem;
 }
 
+.dashboard .dashboard-card-header a{
+    color: var(--text-color);
+    transition: .3s ease;
+}
+
+.dashboard .dashboard-card-header a:hover{
+    color: var(--primary-color);
+}
+
+.dashboard-card-header .dashboard-card-box i{
+    color: var(--primary-color);
+    font-size: 4rem;
+    margin-bottom: 1rem;
+    transition: .3s ease;
+}
+
+.dashboard .dashboard-card-header a:hover i{
+    color: var(--secondary-color);
+}
+
 .dashboard-card-header .dashboard-card-box{
     padding: 3rem 1rem;
     box-shadow: 0 0 1rem rgba(0, 0, 0, 0.3);
@@ -380,10 +400,8 @@ section{
     gap: 1rem;
 }
 
-.dashboard-card-header .dashboard-card-box i{
+.dashboard-card-header .dashboard-card-box .last-publication{
     color: var(--primary-color);
-    font-size: 4rem;
-    margin-bottom: 1rem;
 }
 
 .dashboard-card-header .dashboard-card-box h4{
@@ -393,7 +411,6 @@ section{
 
 .dashboard-card-header .dashboard-card-box p{
     font-size: 2.5rem;
-    color: var(--primary-color);
 }
 
 .dashboard-card-container{
@@ -538,11 +555,12 @@ section{
     border-radius: 50%;
     color: var(--primary-color);
     background-color: var(--secondary-color);
+    transition: .3s ease;
 }
 
-.aside-card-box a {
+.aside-card-box p {
     font-size: 1.6rem;
-    color: var(--primary-color);
+    color: var(--secondary-color);
     font-weight: 700;
     padding: 0;      
     margin: 0;       
@@ -550,8 +568,13 @@ section{
     transition: .3s ease;
 }
 
-.aside-card-box a:hover{
+.dashboard-card-content.right a:hover i{
     color: var(--secondary-color);
+    background-color: var(--primary-color);
+}
+
+.dashboard-card-content.right a:hover p{
+    color: var(--primary-color);
 }
 
 
