--- a/project/assets/css/style.css
+++ b/project/assets/css/style.css
@@ -438,7 +438,7 @@ section{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border: .1rem solid #1095e775;
+    border: .1rem solid var(--secondary-color);
     padding: 2rem;
     box-shadow: 0 0 .2rem rgba(0, 0, 0, 0.3);
     border-radius: .8rem;
@@ -577,6 +577,146 @@ section{
     color: var(--primary-color);
 }
 
+/* -------------------------------------------------------------------------
+/*dashboard student*/
+.dashboard-card-content .student-dashboard-card .student-dashboard-card-box{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: .1rem solid var(--secondary-color);
+    padding: 2rem;
+    box-shadow: 0 0 .2rem rgba(0, 0, 0, 0.3);
+    border-radius: .8rem;
+    margin-bottom: 2rem;
+}
+
+.dashboard-card-content .student-dashboard-card h4{
+    font-size: 2.5rem;
+    font-weight: 600;   
+}
+
+.dashboard-card-content .student-dashboard-card .student-dashboard-card-layer .company-name{
+    margin-bottom: 1rem;
+    font-size: 1.5rem;
+    word-break: break-word;
+    white-space: normal;
+}
+
+.dashboard-card-content .student-dashboard-card .student-dashboard-card-layer p{
+    font-size: 1.3rem;
+    margin-bottom: 0;
+}
+
+.dashboard-card-content .student-dashboard-card .student-dashboard-card-layer p i{
+    margin: 0 .8rem;
+}
+
+.dashboard-card-content .student-dashboard-card .student-dashboard-card-box .offer-card-action{
+    margin: 0 3.5rem;
+}
+
+.dashboard-card-content .student-dashboard-card a{
+    font-size: 1.2rem;
+    color: var(--text-color);
+    font-weight: 500;
+    border: .1rem solid var(--text-color);
+    border-radius: .5rem;
+    padding: 1.3rem;
+    transition: 0.3s ease;
+}
+
+.dashboard-card-content .student-dashboard-card a:hover{
+    background-color: var(--text-color);
+    color: var(--background-color);
+}
+
+/*-------------------------------------------------------------------------*/
+/*Voir candidature */
+.application-received h2{
+    font-size: 3.5rem;
+    margin-bottom: 4rem;
+    text-align: center; 
+}
+
+.application-received p{
+    font-size: 3rem;
+    color: var(--primary-color);
+    text-align: center;
+}
+
+table{
+    border-collapse: collapse;
+    margin: auto;
+    text-align: center;
+}
+
+th, td{
+    border: .3rem solid var(--text-color); 
+    padding: .5rem;
+}
+
+table thead{
+    font-size: 2rem;
+    font-weight: 700;
+}
+
+
+table tbody tr a{
+    font-size: 1.5rem;
+    color: var(--text-color);
+    font-weight: 500;
+    padding: 3rem;
+    word-break: break-word;
+    display: inline-block;
+    max-width: 100%;
+    transition: .3s ease;
+}
+
+table tbody tr a:hover{
+    color: var(--primary-color);
+}
+
+table tbody tr td{
+    font-size: 1.5rem;
+    padding: 1rem 3.5rem;
+}
+
+table tbody tr td .action{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2.5rem;
+}
+
+table tbody tr td .action form .btn-action{
+    padding: .5rem 1rem;
+    margin: 1rem 0;
+    cursor: pointer;
+    border-radius: .8rem;
+    background-color: var(--background-color);
+}
+
+table tbody tr td .action form .btn-action.btn-success{
+    color: var(--success-color);
+    border: .1rem solid var(--success-color);
+    transition: .3s ease;
+}
+
+table tbody tr td .action form .btn-action.btn-success:hover{
+    background-color: var(--success-color);
+    color: var(--off-white-text);
+}
+
+table tbody tr td .action form .btn-action.btn-reject{
+    color: var(--error-color);
+    border: .1rem solid var(--error-color);
+    transition: .3s ease;
+}
+
+table tbody tr td .action form .btn-action.btn-reject:hover{
+    background-color: var(--error-color);
+    color: var(--off-white-text);
+}
 
 /*-------------------------------------------------------------------------*/
 /*Modifier profil*/
@@ -1549,6 +1689,33 @@ footer p a:hover{
     /*view offer*/
     .offer-details .offer-action-btn{
         width: 100%;
+    }
+
+    /*-------------------------------------------------------------------------*/
+    /*Voir candidature */
+    table thead{
+        font-size: 1.5rem;
+        font-weight: 600;
+    }
+
+    table tbody tr a{
+        font-size: 1.3rem;
+        font-weight: 400;
+        padding: 1rem;
+    }
+
+    table tbody tr td{
+        font-size: 1.2rem;
+        padding: .8rem;
+    }
+
+    table tbody tr td .action{
+        gap: 1rem;
+    }
+
+    table tbody tr td .action form .btn-action{
+        padding: .5rem .5rem;
+        border-radius: .8rem;
     }
 
 }
