--- a/project/assets/css/style.css
+++ b/project/assets/css/style.css
@@ -225,6 +225,82 @@ section{
 }
 
 /*-------------------------------------------------------------------------*/
+/*Confirmation*/
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.3);
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+    z-index: 10000;
+    opacity: 0;
+    pointer-events: none;
+    transform: scale(0);
+    transition: transform 0.3s ease, opacity 0.3s ease;
+}
+
+.modal-overlay.show {
+    opacity: 1;
+    pointer-events: auto;
+    transform: scale(1);
+}
+
+.modal-content {
+    background-color: var(--background-color);
+    padding: 2rem 3rem;
+    border-radius: .8rem;
+    text-align: center;
+    max-width: 40rem;
+    width: 90%;
+    box-shadow: 0 0 1.5rem rgba(0,0,0,0.3);
+}
+
+.modal-content h4{
+    color: var(--text-color);
+    font-size: 2rem;
+    margin-bottom: 1.5rem;
+}
+
+.modal-content p{
+    color: var(--text-color);
+    font-size: 1.3rem;
+    margin-bottom: 2rem;
+}
+
+.modal-buttons {
+    margin-top: 2rem;
+    display: flex;
+    justify-content: space-around;
+}
+
+.modal-buttons button {
+    padding: 8px 16px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.modal-buttons .reject {
+  background-color: var(--error-color);
+  color: var(--background-color);
+  transition: .3s ease;
+}
+
+.modal-buttons button:hover {
+    opacity: 0.7;
+}
+
+.modal-buttons .cancel{
+    background-color: var(--text-color);
+    color: var(--background-color);
+    transition: .3s ease;
+}
+
+/*-------------------------------------------------------------------------*/
 /*Authentification*/
 .auth-modal {
     position: relative;
@@ -639,7 +715,7 @@ section{
 
 /*-------------------------------------------------------------------------*/
 /*Voir candidature */
-.application-received h2{
+ .application-received h2{
     font-size: 3.5rem;
     margin-bottom: 4rem;
     text-align: center; 
@@ -651,22 +727,28 @@ section{
     text-align: center;
 }
 
-table{
+
+.application-table table {
+    width: 100%;
     border-collapse: collapse;
-    margin: auto;
+    background: var(--background-color);
+    border-radius: .8rem;
+    overflow: hidden;
+    box-shadow: 0 0 .8rem rgba(0,0,0,0.3);
+
+}
+
+.application-table th, .application-table td {
+    padding: 1.5rem;
+    border-bottom: .1rem solid var(--card-background);
     text-align: center;
 }
 
-th, td{
-    border: .3rem solid var(--text-color); 
-    padding: .5rem;
-}
-
-table thead{
-    font-size: 2rem;
+.application-table th {
+    background: var(--card-background);
     font-weight: 700;
+    font-size: 2rem;
 }
-
 
 table tbody tr a{
     font-size: 1.5rem;
@@ -688,10 +770,11 @@ table tbody tr td{
     padding: .5rem 2.5rem;
 }
 
-table tbody tr td .action{
+table tbody tr td .action, table tbody tr .action{
     display: flex;
     justify-content: center;
     align-items: center;
+    border: none;
     gap: 2.5rem;
 }
 
@@ -714,23 +797,26 @@ table tbody tr td .action form .btn-action.btn-success:hover{
     color: var(--off-white-text);
 }
 
-table tbody tr td .action form .btn-action.btn-reject{
+table tbody tr td .action form .btn-action.reject-btn{
     color: var(--error-color);
     border: .1rem solid var(--error-color);
     transition: .3s ease;
 }
 
-table tbody tr td .action form .btn-action.btn-reject:hover{
+table tbody tr td .action form .btn-action.reject-btn:hover{
     background-color: var(--error-color);
     color: var(--off-white-text);
 }
 
 /*-------------------------------------------------------------------------*/
-/*Voir utilisateurs */
-.admin-users h2{
+/*Voir utilisateurs admin*/ 
+ .admin-users{
+    margin-bottom: 3rem;
+ }
+ .admin-users h2{
     font-size: 3.5rem;
-    margin-bottom: 5rem;
-    text-align: center;    
+    margin-bottom: 4rem;
+    text-align: center; 
 }
 
 .admin-users .admin-users-filter{
@@ -738,7 +824,7 @@ table tbody tr td .action form .btn-action.btn-reject:hover{
     justify-content: center;
     align-items: center;
     gap: 6rem;
-    margin-bottom: 2rem;
+    margin-bottom: 3.5rem;
 }
 
 .admin-users .admin-users-filter button{
@@ -773,7 +859,7 @@ table tbody tr .action .btn-action{
 table tbody tr .action .btn-action.show{
     color: var(--text-color);
     border: .1rem solid var(--text-color);
-    margin-bottom: 1rem;
+    margin: 1rem 0;
     transition: .3s ease;
 }
 
@@ -1137,12 +1223,12 @@ table tbody tr .action .btn-action.delete:hover{
     color: var(--off-white-text);
 }
 
-.view-offer .offer-box .offer-card .offer-card-action .offer-delete{
+.view-offer .offer-box .offer-card .offer-card-action .offer-delete, .dashboard-card-box.aside .offer-delete{
     border: .1rem solid var(--error-color);
     color: var(--error-color);
 }
 
-.view-offer .offer-box .offer-card .offer-card-action .offer-delete:hover{
+.view-offer .offer-box .offer-card .offer-card-action .offer-delete:hover, .dashboard-card-box.aside .offer-delete:hover{
     background-color: var(--error-color);
     color: var(--off-white-text);
 }
